--- a/SistTestMillon/SistTestMillon/Views/TestMillon/Index.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/TestMillon/Index.cshtml
@@ -25,7 +25,7 @@
     <div class="col-sm-12">
         <div class="c-table-responsive@desktop">
             <table class="c-table c-table--highlight u-mb-small">
-                <caption class="c-table__title" style="background-color:Highlight;caption-side:top">
+                <caption class="c-table__title" style="background-color:deepskyblue;caption-side:top">
                         <h3 style="text-align:center">Test Millon</h3>
                         <p style="text-align:center">Contesta las siguientes preguntas marcando V o F</p>
                 </caption>
