--- a/SistTestMillon/SistTestMillon/Views/Citas/Index.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Citas/Index.cshtml
@@ -83,7 +83,7 @@
             <div class="c-dropdown__menu dropdown-menu dropdown-menu-right" aria-labelledby="dropdwonMenuAvatar" x-placement="bottom-end" style="position: absolute; transform: translate3d(-94px, 36px, 0px); top: 0px; left: 0px; will-change: transform;">
                 <a class="c-dropdown__item dropdown-item"onclick="location.href='@Url.Action("Index", "Home")';return false;">Inicio</a>
                 <a class="c-dropdown__item dropdown-item" onclick="location.href='@Url.Action("Cerrar", "TestMillon")';return false;">Cerrar Sesion</a>
-                
+                <a class="c-dropdown__item dropdown-item" onclick="cambio()">Cambiar horario</a>
             </div>
 
 
@@ -135,7 +135,7 @@
 
                 <div class="c-modal__footer" id="opciones">
                     <div class="row">
-                        <div class="u-text-right">
+                        <div class="text-center">
                             <button class="c-btn c-btn--success"  id="btnEditar">
                                 <i class="fa fa-pencil-square-o u-mr-xsmall"></i>Editar
                             </button>
@@ -215,6 +215,40 @@
                 </div>
             </div><!-- // .c-modal__content -->
         </div><!-- // .c-modal__dialog -->
+    </div>
+
+    <div class="c-modal c-modal--large modal fade" id="ModalSave2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" data-backdrop="static">
+        <div class="c-modal__dialog modal-dialog" role="document">
+            <div class="c-modal__content">
+                <div class="c-modal__header u-bg-primary">
+                    <h3 class="c-modal__title">Horarios</h3>
+                    <span class="c-modal__close" data-dismiss="modal" aria-label="Close">
+                        <i class="fa fa-close"></i>
+                    </span>
+                </div>
+                <div class="c-modal__body">
+                    <form>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <label class="c-field__label" for="Profesion">Psicologo</label>
+                                <div class="c-field has-addon-right" style="margin-bottom:10px">
+                                    <input type="text" class="c-input" name="CodigoDiagnosticohora" id="DniPsicologohora" placeholder="Seleccionar Diagnostico" required="required">
+                                    <button type="button" class="c-btn c-btn--info" id="PsicologosTotalesh">
+                                        <i class="fa fa-search"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <br />
+                        <div class="u-text-right">
+                            <button type="button" class="c-btn c-btn-primary" data-dismiss="modal">Cerrar</button>
+                            <button type="button" id="btnSave2" class="c-btn c-btn-success">Generar</button>
+                        </div>
+                    </form>
+
+                </div>
+            </div><!-- // .c-modal__content -->
+        </div>
     </div>
 
     <div class="c-modal c-modal--large modal fade" id="ModalSave" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" data-backdrop="static">
@@ -309,6 +343,18 @@
     document.getElementById("ModalSave").style.zIndex = "1051";
     document.getElementById("error").style.zIndex = "1052";
 
+    function cambio(){
+    
+        $("#ModalSave2").modal("show");
+        
+    
+    }
+
+    $('#btnSave2').click(function () {
+
+        GenerarPsicolog();
+
+    })
 
 
 
@@ -321,6 +367,73 @@
         Generar();
 
     });
+
+    function GenerarPsicolog() {
+        
+        events = [];
+        $.ajax({
+            type: "Get",
+            url: "/Citas/GetEventsPsicolog",
+            data: { 'dni': $('#DniPsicologohora').val() },
+            success: function (data) {               
+                $.each(data, function (i, v) {                    
+                    events.push({
+                        id: v.Id,
+                        title: v.title,
+                        start: v.start,
+                        end: v.end,
+                        dniPaciente: v.dniPaciente,
+                        dniPsicologo: v.dniPsicologo,
+                        description: v.description,
+                        Psicologo: v.Psicologo
+                        
+                    });
+
+                })
+                $.ajax({
+                    type: "Get",
+                    url: "/Horarios/GetHorariosPsicolog",
+                    data: { 'dni': $('#DniPsicologohora').val() },
+                    success: function (data) {               
+                        $.each(data, function (i, v) {                    
+                            events.push({
+                                Citaid: v.Id,
+                                title:  v.title,
+                                start: v.start,
+                                end:  v.end,
+                                dniPsicologo:v.dniPsicologo,
+                                Psicologo: v.Psicologo
+                        
+                            });
+
+                        })
+                        Calendario2(events);
+
+
+                    },
+                    error: function (error) {
+                        alert('failed');
+
+                    }
+
+
+                })
+
+
+            },
+            error: function (error) {
+                alert('failed');
+
+            }
+
+
+        })
+
+
+
+    }
+
+
 
 
 
@@ -447,18 +560,40 @@
                     dnis = calEvent.dniPsicologo;
                     dniPacientes = calEvent.dniPaciente;
                     dniPsicologos = calEvent.dniPsicologo;
+                    horainicios = calEvent.start.format('YYYY/MM/DD HH:mm:ss A');
+                    horafinales = calEvent.end.format('YYYY/MM/DD HH:mm:ss A');
                     idHorario=calEvent.Citaid;
 
                     dfff = "@HttpContext.Current.Session["Dni"]";
-                    var usuario = "@HttpContext.Current.Session["TipoUsuario"]";
+                    usuario = "@HttpContext.Current.Session["TipoUsuario"]";
 
-                    if (usuario == "Administrador" || usuario == "Psicologo" && dfff == dniPsicologos) {
-                        //document.getElementById('opciones').style.visibility = 'visible';                    
-                        //document.getElementById('PacientesTotales').style.visibility = 'visible';
-                        //document.getElementById('PsicologosTotales').style.visibility = 'visible';
+                    if (usuario == "Administrador") {
+                        document.getElementById('opciones').style.visibility = 'visible';                    
+                        document.getElementById('PacientesTotales').style.visibility = 'visible';
+                        document.getElementById('PsicologosTotales').style.visibility = 'visible';
+                        
                     }
 
-                    else if (dfff == dniPacientes && usuario == "Paciente" ||calEvent.title=="Disponible" ||calEvent.title=="Examen Psicologico") {
+                    else if (dfff == dniPsicologos && usuario == "Psicologo") {
+                        document.getElementById('opciones').style.visibility = 'visible';
+                        document.getElementById('PacientesTotales').style.display = 'visible';
+                        document.getElementById('PsicologosTotales').style.display = 'none';
+                    
+                    }
+                    else if (dfff == dniPacientes && usuario == "Paciente") {
+                        document.getElementById('opciones').style.visibility = 'visible';
+                        document.getElementById('PacientesTotales').style.display = 'none';
+                        document.getElementById('PsicologosTotales').style.display = 'none';
+                    
+                    }
+                    else if (dfff == dniPsicologos && usuario == "Psicologo" && calEvent.title=="Disponible"||dfff == dniPsicologos && usuario == "Psicologo" && calEvent.title=="Examen Psicologico") {
+                        document.getElementById('opciones').style.visibility = 'visible';
+                        document.getElementById('PacientesTotales').style.display = 'visible';
+                        document.getElementById('PsicologosTotales').style.display = 'none';
+                        
+                    
+                    }
+                    else if (usuario == "Paciente" && calEvent.title=="Disponible"||usuario == "Paciente" && calEvent.title=="Examen Psicologico") {
                         document.getElementById('opciones').style.visibility = 'visible';
                         document.getElementById('PacientesTotales').style.display = 'none';
                         document.getElementById('PsicologosTotales').style.display = 'none';
@@ -466,7 +601,7 @@
                     }
                     else {
                         document.getElementById('opciones').style.visibility = 'hidden';
-
+                        
                     }
 
 
@@ -514,9 +649,9 @@
         var primera = $('#HoraInicio').val().substring(0, 2);
         var segunda = $('#HoraFinal').val().substring(0, 2);
                      
-        @{var fechainicial = ContadorHelpers.FechaIni();                
+        @*@{var fechainicial = ContadorHelpers.FechaIni();                
         var fecha = ContadorHelpers.ConsultarFechafin(fechainicial); 
-        }    
+        }*@    
         var mes1 = $('#HoraInicio').val().substring(3,5);
         var mes2 = $('#HoraFinal').val().substring(3, 5);
         var c = parseInt(mes1, 10);
@@ -534,7 +669,7 @@
             alert('Es requerido el Dni del paciente');
             return;
         }
-        if ($('#HoraInicio').val().trim() == ""||@fecha<=horastart) {
+        if ($('#HoraInicio').val().trim() == ""||horasend<=horastart) {
             alert('Es requerido hora de inicio');
             return;
         }
@@ -563,11 +698,11 @@
 
     })
 
-    $('#btnDelete').click(function () {
+    function eliminar() {
         $.ajax({
             type: "Post",
-            url: "/Citas/DeleEvent",
-            data: { 'EventId': selectedEvent.id },
+            url: "/Horarios/Estado2",
+            data: { 'Estado': "Disponible", 'dni': dniPsicologos, 'inicio': horainicios, 'final': horafinales },
             success: function (data) {
                 if (data.status) {
                     Generar();
@@ -579,11 +714,32 @@
                     $("#standard-modal3").modal('hide');
 
 
+
+
                 }
 
+            }
+        })
 
 
 
+    }
+
+    $('#btnDelete').click(function () {
+        $.ajax({
+            type: "Post",
+            url: "/Citas/DeleEvent",
+            data: { 'EventId': selectedEvent.id },
+            success: function (data) {
+                if (data.status) {
+                    eliminar();
+                    
+                }
+                else {
+                    eliminar();
+
+
+                }
             },
             error: function (error) {
                 alert('failed');
@@ -606,7 +762,7 @@
         if(idHorario!=undefined){
             $.ajax({
                 type: "Post",
-                url: "/Horarios/DeleEvent",
+                url: "/Horarios/Estado",
                 data: { 'EventId': idHorario },
                 success: function (data) {
                 },
@@ -676,7 +832,17 @@
         })
     })
 
-
+    $("#PsicologosTotalesh").click(function () {
+        $.ajax({
+            type: "Get",
+            url: '@Url.Action("ListaPsicologos3", "Diagnostico")',
+            cache: false,
+            success: function (result) {
+                $('#Psicologos').modal('show');
+                $('#ListaPsicologos').html(result);
+            }
+        })
+    })
 
     $('#btnEditar').click(function () {
         OpenAddEdit();
@@ -702,8 +868,15 @@
         if (selectedEvent != null) {
             $('#IdCita').val(selectedEvent.id);
             if (selectedEvent.dniPaciente != "" && selectedEvent.dniPsicogolo != "") {
-                $('#DniPaciente').val(dfff);
-                $('#DniPsicologo').val(dniPsicologos);
+                $('#DniPaciente').val(dniPacientes);
+                if (usuario!="Psicologo") {
+                    $('#DniPsicologo').val(dniPsicologos);
+                }
+                else{
+                    $('#DniPsicologo').val(dfff);
+                }
+
+                
                 $('#Descripcion').val(selectedEvent.description);
             }
             $('#HoraInicio').val(moment(selectedEvent.start).format('DD/MM/YYYY HH:mm A'));
