--- a/SistTestMillon/SistTestMillon/Views/Diagnostico/Index.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Diagnostico/Index.cshtml
@@ -191,7 +191,13 @@
                         <div class="col-md-2">
                             <div class="c-field u-mb-small">
                                 <label class="c-field__label" for="Histriónico">Histriónico</label>
-                                <input class="c-input" type="text" id="Histriónico" required="required" name="Histriónico" placeholder="Narcisista">
+                                <input class="c-input" type="text" id="Histriónico" required="required" name="Histriónico" placeholder="Histriónico">
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="c-field u-mb-small">
+                                <label class="c-field__label" for="Validez">Validez</label>
+                                <input class="c-input" type="text" id="Validez" required="required" name="Validez" placeholder="Validez">
                             </div>
                         </div>
                     </div>
