--- a/SistTestMillon/SistTestMillon/Views/Shared/_Layout.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@ else {
             </ul>
             @if (HttpContext.Current.Session["TipoUsuario"].Equals("Administrador"))
             {
-            <h4 class="c-sidebar__title">Apps</h4>
+            <h4 class="c-sidebar__title">Perfiles</h4>
             <ul class="c-sidebar__list">
                 <li class="c-sidebar__item">
                     <a class="c-sidebar__link"  href="~/Psicologos">
